[gd_scene load_steps=6 format=3 uid="uid://bvejjyk28tffe"]

[ext_resource type="Script" uid="uid://c5p2s8byyv3ub" path="res://Scenes/Entities/task.gd" id="1_cc1us"]
[ext_resource type="Texture2D" uid="uid://ckwmhp2fqsey3" path="res://icon.svg" id="1_fk38o"]
[ext_resource type="Texture2D" uid="uid://dg8sg61v6cknb" path="res://Assets/UI/bar_background.png" id="3_p0hvf"]
[ext_resource type="Texture2D" uid="uid://d2npa3gxxrrjd" path="res://Assets/UI/bar_fill.png" id="4_pu625"]

[sub_resource type="CircleShape2D" id="CircleShape2D_cc1us"]
radius = 145.0

[node name="Task" type="Node2D"]
script = ExtResource("1_cc1us")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_fk38o")

[node name="InteractableArea" type="Area2D" parent="."]
visible = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableArea"]
shape = SubResource("CircleShape2D_cc1us")

[node name="ProgressBarRoot" type="Node2D" parent="."]

[node name="BarBackground" type="Sprite2D" parent="ProgressBarRoot"]
modulate = Color(0, 0, 0, 1)
position = Vector2(0, -85)
texture = ExtResource("3_p0hvf")
centered = false
offset = Vector2(-32, 0)

[node name="BarFill" type="Sprite2D" parent="ProgressBarRoot"]
position = Vector2(0, -85)
texture = ExtResource("4_pu625")
centered = false
offset = Vector2(-32, 0)

[connection signal="body_entered" from="InteractableArea" to="." method="on_area_entered"]
[connection signal="body_exited" from="InteractableArea" to="." method="on_area_exited"]
